--- a/front_end/add-admin.html
+++ b/front_end/add-admin.html
@@ -18,6 +18,7 @@
   <input id="newDegree" placeholder="Degree (e.g. Dentist, Ortho, MBBS)">
   <input id="newUsername" placeholder="Username (Login ID)">
   <input id="newPassword" type="password" placeholder="New Password">
+  <input id="secratkey" type="password" placeholder="Super Admin Secret Key">
   <label for="adminrole">Admin Role:</label>
     <select name="adminrole" id="adminrole">
       <option value="admin">Admin</option>
@@ -46,10 +47,11 @@ async function createAdmin() {
     const degree = document.getElementById('newDegree').value;
     const role = document.getElementById('adminrole').value;
     const currentRole = localStorage.getItem("adminRole");
+    const secretKey = document.getElementById('secratkey').value;
 
     if (!u || !p || !name || !degree || !role) return alert("Please fill all fields");
 
-    const secretKey = prompt("Enter the Super Admin Secret Key:");
+    
     if (!secretKey) return alert("Secret key is required!");
 
     try {
