--- a/front_end/admin.html
+++ b/front_end/admin.html
@@ -247,7 +247,7 @@ async function login() {
 
 function logout() { localStorage.clear(); location.reload(); }
 
-// --- INIT ---
+// INIT
 (async function init() {
     const role = localStorage.getItem("adminRole");
     const myId = localStorage.getItem("adminId");
